fixed z-index, have caption show in zoom window as title if title doesn't exist

--- a/packages/addons-website/scss/components/_image-component.scss
+++ b/packages/addons-website/scss/components/_image-component.scss
@@ -23,7 +23,7 @@
 }
 
 .#{$prefix}--image-component > *:not(.image-component__caption) {
-    background: white;
+    background: $ibm-colors__white;
 }
 
 .#{$prefix}--image-component.transparent-bg > *:not(.image-component__caption) {
