--- a/packages/addons-website/scss/components/_overlay.scss
+++ b/packages/addons-website/scss/components/_overlay.scss
@@ -9,7 +9,7 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  z-index: 15;
+  z-index: 17000;
   align-items: center;
   justify-content: space-between;
 }
@@ -17,20 +17,20 @@
 .#{$prefix}--overlay-leftArea {
   align-self: flex-start;
   flex-basis: 20%;
-  z-index: 17;
+  z-index: 17001;
 }
 
 .#{$prefix}--overlay-centerArea {
   align-self: center;
   flex-basis: 60%;
-  z-index: 18;
+  z-index: 17002;
 }
 
 .#{$prefix}--overlay-rightArea {
   align-self: flex-start;
   color: $ibm-colors__white;
   flex-basis: 20%;
-  z-index: 19;
+  z-index: 17003;
   text-align: right;
   
   svg {
